--- a/md_server/static/cdark.css
+++ b/md_server/static/cdark.css
@@ -1,12 +1,5 @@
-
-
-
-body{
-    background-color: #0a0a0a;
-    color: #ddd;
-    font-family: 'Roboto', sans-serif;
+body {
+  background-color: #0a0a0a;
+  color: #ddd;
+  font-family: "Roboto", sans-serif;
 }
-
-
-
-
